@@ -1,3 +1,5 @@
+- Improvement: Allow deletion of execution course with messaging groups created
+
 34.3.1 (16-09-2022)
 - Refactor: Add method removeGrade to EnrolmentEvaluation
 
